--- a/UnreadTabs.safariextension/Info.plist
+++ b/UnreadTabs.safariextension/Info.plist
@@ -13,13 +13,30 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.2</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1015</string>
+	<string>1016</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
 		<string>Global.html</string>
+		<key>Toolbar Items</key>
+		<array>
+			<dict>
+				<key>Command</key>
+				<string></string>
+				<key>Identifier</key>
+				<string>com.manytricks.UnreadTabs.Toolbar.Open</string>
+				<key>Image</key>
+				<string>Toolbar.png</string>
+				<key>Include By Default</key>
+				<false/>
+				<key>Label</key>
+				<string>Unread → Tabs</string>
+				<key>Tool Tip</key>
+				<string>Open unread posts in new tabs</string>
+			</dict>
+		</array>
 	</dict>
 	<key>Content</key>
 	<dict>
