The toolbar button now auto-enables/-disables, and it shows the number of unread posts in a badge.

--- a/UnreadTabs.safariextension/Settings.plist
+++ b/UnreadTabs.safariextension/Settings.plist
@@ -58,5 +58,17 @@
 		<key>Type</key>
 		<string>CheckBox</string>
 	</dict>
+	<dict>
+		<key>DefaultValue</key>
+		<false/>
+		<key>Key</key>
+		<string>com.manytricks.UnreadTabs.Focus.Smart</string>
+	</dict>
+	<dict>
+		<key>DefaultValue</key>
+		<true/>
+		<key>Key</key>
+		<string>com.manytricks.UnreadTabs.Toolbar.Badge</string>
+	</dict>
 </array>
 </plist>
